--- a/flaskr/templates/show_entries.html
+++ b/flaskr/templates/show_entries.html
@@ -18,4 +18,6 @@
     <li><em>Unbelievable.  No entries here so far</em>
   {% endfor %}
   </ul>
+    <a href="{{ url_for('show_phrase_page') }}"> Click here to add a phrase </a>
+
 {% endblock %}
